
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >

        <TableRow
            android:id="@+id/tableRowFinal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/calculateButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="calculateProceeds"
                android:text="@string/calculateButton" />

            <TextView
                android:id="@+id/calculatedProceeds"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:text="@string/calculatedProceeds" />
        </TableRow>
    </TableLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1" >
            
            <TableRow
                android:id="@+id/tableRowCounty"
                android:layout_width="100dip"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/county_label"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/county_label" />

                <Spinner
                    android:id="@+id/county_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </TableRow>
            
            <TableRow
                android:id="@+id/tableRowPaidThrough"
                android:layout_width="100dip"
                android:layout_height="wrap_content" >
                
                <TextView
                    android:id="@+id/PaidThrough_label"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/PaidThrough_label" />
                <Spinner
                    android:id="@+id/PaidThrough_spinner"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_weight="1" />
                    
            </TableRow>
            
            <TableRow
                android:id="@+id/tabelRowHOACondoFees1"
                android:layout_width="100dip"
                android:layout_height="wrap_content" >
                
                <TextView 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/HOACondoFeesLabel1" />

                <Spinner
                    android:id="@+id/HOACondoFeesSpinner1"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_weight="1" />
                    
            </TableRow>
            
            <TableRow 
                android:id="@+id/tableRowHOACondoFees2"
                android:layout_width="100dip"
                android:layout_height="wrap_content" >
                
                <TextView 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/HOACondoFeesLabel2" />
                <EditText 
                    android:id="@+id/HOAFeesDollars"
                    android:inputType="numberDecimal"
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/HOACondoFeesDecimal"/>         
            </TableRow>
            
            <TableRow
                android:id="@+id/closingDate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
                
                <TextView
                    android:text="@string/closingDateLabel" />
                <EditText
                    android:id="@+id/closingDateValue" 
                    android:inputType="date"
                    android:focusable="False"
                    />
                
            </TableRow>
                
            
            <TableRow
                android:id="@+id/tableRow0"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:padding="3dip"
                    android:text="@string/selling_price_label" />

                <EditText
                    android:id="@+id/selling_price"
                    android:inputType="numberDecimal"
                    android:padding="3dip"
                    android:scrollHorizontally="true"
                    android:text="@string/selling_price_decimal" />
                <requestFocus />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/first_mortgage_label" />

                <EditText
                    android:id="@+id/first_mortgage_decimal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:text="@string/first_mortgage_decimal" >

                    
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/second_mortgage_label" />

                <EditText
                    android:id="@+id/second_mortgage_decimal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:text="@string/second_mortgage_decimal" >

                    
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/other_liens_label" />

                <EditText
                    android:id="@+id/other_liens_decimal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:text="@string/other_liens_decimal" >

                    
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/realtor_commissions"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/realtor_commissions_label" />

                <Spinner
                    android:id="@+id/realtor_commissions_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/other_realtor_fees_label" />

                <EditText
                    android:id="@+id/other_realtor_fees_decimal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:text="@string/other_realtor_fees_decimal" >

                    
                </EditText>
            </TableRow>

             <TableRow
                android:id="@+id/tableRow14"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@string/gas_line_label" />

                <EditText
                    android:id="@+id/gas_line_decimal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:text="@string/gas_line_decimal" >

                    
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow15"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@string/home_warranty_label" />

                <EditText
                    android:id="@+id/home_warranty_decimal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:text="@string/home_warranty_decimal" >

                    
                </EditText>
            </TableRow>
            <TableRow
                android:id="@+id/tableRow16"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@string/s_h_label" />

                <EditText
                    android:id="@+id/s_h_decimal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:text="@string/s_h_decimal" >

                    
                </EditText>
            </TableRow>
            <TableRow
                android:id="@+id/tableRow17"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@string/seller_concessions_label" />

                <EditText
                    android:id="@+id/seller_concessions_decimal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:text="@string/seller_concessions_decimal" >

                </EditText>
            </TableRow>
            
        </TableLayout>
    </ScrollView>

</LinearLayout>